@@ -18,6 +18,10 @@ typedef struct SpriteRecord {
 
         char multiplicativeBlend;
 
+        // sprite should never flip when drawn, no matter what (for
+        // words and such)
+        char noFlip;
+
         // maximum pixel dimension
         // (used for sizing in pickers)
         int maxD;
@@ -96,6 +100,9 @@ SpriteRecord *getSpriteRecord( int inID );
 
 
 char getUsesMultiplicativeBlending( int inID );
+
+char getNoFlip( int inID );
+
 
 // not destroyed by caller
 char *getSpriteTag( int inID );
